[package]
name = "parking_monitor"
version = "0.1.0"
authors = ["HyperHamster <dwb5a9+q5yskv5oy2pdhr@sharklasers.com>"]
edition = "2018"
description = "Parking-lot-flavored monitor synchronization construct"
license = "MIT"
repository = "https://github.com/HyperHamster/parking_monitor"
readme = "README.md"
keywords = ["monitor", "synchronization", "parking_lot"]
categories = ["concurrency"]

[dependencies]
parking_lot = "0.7.1"
