[package]
name = "parking_monitor"
version = "0.1.1"
authors = ["Hyper <9900991+HyperHamster@users.noreply.github.com>"]
edition = "2021"
description = "Parking-lot-flavored monitor synchronization construct"
license = "MIT"
repository = "https://github.com/HyperHamster/parking_monitor"
readme = "README.md"
keywords = ["monitor", "synchronization", "parking_lot"]
categories = ["concurrency"]

[dependencies]
parking_lot = "0.12.1"
